# kts-school-backend-learn-pytest

./: .gitignore
5-tests/: Makefile  pyproject.toml
5-tests/tests/: conftest.py
5-tests/tests/fixtures/: user.py
5-tests/tests/post/: test_views.py
5-tests/tests/user/: test_views.py
